--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/index.js",
     "migrate": "npx prisma migrate dev",
+    "truncate": "node ./src/database/truncate.js",
     "seeder": "node ./prisma/seed/seeder.js",
     "postinstall": "prisma generate"
   },
